# rusty-mnist

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs
