[package]
name = "rusty-mnist"
version = "0.1.0"
authors = ["Jason Reilly <jdr0887@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
clap = "2.21"
libmath = "0.2.1"
csv = "1.1.1"
dirs = "2.0.2"
flate2 = "1.0.7"
glob = "0.3.0"
humantime = "1.2.0"
image = "0.23.3"
itertools = "0.9.0"
lazy_static = "1.4.0"
libm="0.2.1"
log = { version = "^0.4.8", features = ["std"] }
mnist = "0.4.0"
num_cpus = "1.12.0"
rand = "0.7.3"
rayon = "1.3.0"
regex = "1.3.6"
rulinalg="0.4.2"
rustlearn="0.5.0"
rusty-machine = "0.5.4"
simple_logger = "1.6.0"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.48"
structopt = "0.3.11"
strum = "0.18.0"
strum_macros = "0.18.0"
threadpool = "1.7"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
walkdir = "2.3.1"

# juice = "0.2.3"
# coaster = "0.1.0"
# coaster-nn = "0.4.1"
juice = { version = "0.2.3", default-features = false }
coaster = { version = "0.1.0", default-features = false }
coaster-nn = { version = "0.4.1", default-features = false }
# coaster-blas = { version = "0.2.1", default-features = false }

# [patch.crates-io]
# juice = { path = "../../../github/juice/juice/juice", default-features = false }
# coaster = { path = "../../../github/juice/juice/coaster", default-features = false }
# coaster-nn = { path = "../../../github/juice/juice/coaster-nn", default-features = false }
# coaster-blas = { path = "../../../github/juice/juice/coaster-blas" }

[features]
default = ["native", "cuda"]
native  = ["juice/native"]
cuda    = ["juice/cuda"]
opencl  = ["juice/opencl"]
# native = ["juice/native", "coaster/native"]
# opencl = ["juice/opencl", "coaster/opencl"]
# cuda = ["juice/cuda", "coaster/cuda"]
